--- a/public/search/index.html
+++ b/public/search/index.html
@@ -9,33 +9,33 @@
     <meta name="author" content="">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Search :: Path to my memory">
-    <meta property="og:url" content="http://localhost:1313/search/index.html">
+    <meta property="og:url" content="//localhost:1313/search/index.html">
     <meta property="og:site_name" content="Path to my memory">
     <meta property="og:title" content="Search :: Path to my memory">
     <meta property="og:locale" content="en_us">
     <meta property="og:type" content="website">
     <meta itemprop="name" content="Search :: Path to my memory">
     <title>Search :: Path to my memory</title>
-    <link href="/css/auto-complete/auto-complete.min.css?1766095605" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1766095605" defer></script>
-    <script src="/js/search-lunr.js?1766095605" defer></script>
-    <script src="/js/search.js?1766095605" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1766120914" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1766120914" defer></script>
+    <script src="/js/search-lunr.js?1766120914" defer></script>
+    <script src="/js/search.js?1766120914" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1766095605";
+      window.relearn.index_js_url="/searchindex.en.js?1766120914";
     </script>
-    <script src="/js/lunr/lunr.min.js?1766095605" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1766095605" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1766095605" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1766095605" defer></script>
+    <script src="/js/lunr/lunr.min.js?1766120914" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1766120914" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1766120914" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1766120914" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766095605" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766095605" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766095605" rel="stylesheet">
-    <link href="/css/theme.css?1766095605" rel="stylesheet">
-    <link href="/css/format-html.css?1766095605" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766120914" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766120914" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766120914" rel="stylesheet">
+    <link href="/css/theme.css?1766120914" rel="stylesheet">
+    <link href="/css/format-html.css?1766120914" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -43,7 +43,7 @@
       window.relearn.path='\/search\/index.html';
       window.relearn.relBasePath='..';
       window.relearn.relBaseUri='..';
-      window.relearn.absBaseUri='http:\/\/localhost:1313';
+      window.relearn.absBaseUri='\/\/localhost:1313';
       window.relearn.disableInlineCopyToClipboard=false;
       window.relearn.enableBlockCodeWrap=true;
       // legal
@@ -212,8 +212,8 @@
 <div id="R-footer" class="default-animation"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766095605" defer></script>
-    <script src="/js/theme.js?1766095605" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766120914" defer></script>
+    <script src="/js/theme.js?1766120914" defer></script>
     <div id="toast-container" role="status" aria-live="polite" aria-atomic="false"></div>
   </body>
 </html>
